# Alg-progs

./: lab0  lab0.cpp  lab0_5a  lab0_5a.cpp  lab0_5b  lab0_5b.cpp  lab0_5bOOP.cpp  lab1  lab1.cpp
Computer architecture/: task3_a
Computer architecture/task3_1/: task3_a  task3_a.cpp  task3_b  task3_b.cpp
Computer architecture/task3_2/: task3  task3.cpp
lab2/: lab2  lab2.cpp  stack.cpp  stack.hpp
lab3/: lab3  lab3.cpp  lab3file.cpp  table.cpp  table.hpp
lab3_old/: filetable.cpp  filetable.hpp  lab3  lab3.cpp  lab3file  lab3file.cpp  table.cpp  table.hpp
lab4a/: CMakeLists.txt  bintree.cpp
lab4a/src/: bintree.cpp  bintree.hpp  lab4a.cpp
lab4b/: CMakeLists.txt
lab4b/src/: lab4b.cpp  llrb.cpp  llrb.hpp
lab5/: CMakeLists.txt
lab5/src/: graph.cpp  graph.hpp  lab5.cpp  tests  tests.cpp
labmsu/: CMakeLists.txt
labmsu/src/: connectedSets.cpp  connectedSets.hpp  labmsu.cpp  tests.cpp
